<resources>
    <string name="app_name">Meal Monkey</string>
    <string name="title_map">Map</string>
    <string name="title_feed">Feed</string>
    <string name="title_about">About us</string>
    <string name="title_activity_maps">MapActivity</string>
    <string name="text_error_not_implemented">Not implemented yet</string>
    <string name="text_mark_it">Mark it! 😋🍴</string>
    <string name="text_about_us"><b>Team:</b> CIFP Tartanga LHII - G4\n</string>
    <string name="title_floating_button_languages">FloatingButton</string>
    <string name="language_spanish">Español</string>
    <string name="language_english">English</string>
    <string name="text_choose_language">Choose a language</string>
    <string name="name">Name</string>
    <string name="map_image_button" translatable="false">Map</string>
    <string name="date">Date</string>
    <string name="text_rating_bar" translatable="false">RatingBar</string>
    <string name="description">Description</string>
    <string name="text_add">Add it!</string>
    <string name="text_loading">Loading...</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_email" translatable="false">Email</string>
    <string name="text_password">Password</string>
    <string name="error_authentication">Error in the authentication</string>
    <string name="text_gif" translatable="false">gif</string>
    <string name="score">Score</string>
    <string name="text_marker_added">Marker added!</string>
    <string name="error_marker_not_added">Error, marker not added</string>
    <string name="text_edit">Edit</string>
    <string name="text_snackbar">Touch to add a marker!</string>
    <string name="text_ok" translatable="false">Ok</string>
</resources>