<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantAdd">

    <ImageView
        android:id="@+id/imageButtonMapAdd"
        android:layout_width="276dp"
        android:layout_height="180dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/map_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googlemap" />

    <TextView
        android:id="@+id/add_text_name"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonMapAdd"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="324dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_text_name"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonMapAdd" />

    <TextView
        android:id="@+id/add_text_description"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/add_description"
        android:layout_width="324dp"
        android:layout_height="117dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_text_name"
        app:layout_constraintTop_toBottomOf="@+id/add_name" />

    <RatingBar
        android:id="@+id/ratingBarAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:contentDescription="@string/text_rating_bar"
        android:isIndicator="true"
        android:progressTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/text_add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>