<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDetails">

    <ImageButton
        android:id="@+id/imageButtonMapDetails"
        android:layout_width="276dp"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/map_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googlemap" />

    <TextView
        android:id="@+id/details_text_name"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonMapDetails"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/details_name"
        android:layout_width="324dp"
        android:layout_height="52dp"
        android:layout_marginEnd="44dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/details_text_name"
        app:layout_constraintTop_toBottomOf="@+id/details_text_name" />

    <TextView
        android:id="@+id/details_text_description"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/details_text_name"
        app:layout_constraintTop_toBottomOf="@+id/details_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="324dp"
        android:layout_height="117dp"
        android:layout_marginEnd="44dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/details_text_name"
        app:layout_constraintTop_toBottomOf="@+id/details_text_description" />

    <RatingBar
        android:id="@+id/ratingBarDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/text_rating_bar"
        android:isIndicator="true"
        android:progressTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_description" />

</androidx.constraintlayout.widget.ConstraintLayout>